--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,3 +1,11 @@
-.Dictionary {
+.Dictionary section {
+  background: white;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgb(0 0 0 / 10%);
+  margin: 50px 0;
+}
 
+.Dictionary input {
+  width: 100%;
 }
