--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,9 @@ body {
   background-color: #B1D7B4;
   font-family: Arial, Helvetica, sans-serif
 }
+
+h2 {
+  margin-top: 0;
+  font-size: 40px;
+  color: #7FB77E;
+}
